--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -9,16 +9,19 @@ ENV LANG C.UTF-8
 
 # https://support.circleci.com/hc/en-us/articles/360045268074-Build-Fails-with-Too-long-with-no-output-exceeded-10m0s-context-deadline-exceeded-
 ENV PYTHONUNBUFFERED=1
+ENV NODE_VERSION=node_16.x
 
 RUN \
   # Install system dependencies
   apt-get update \
   && apt-get install -y --no-install-recommends \
+      apt-transport-https \
       build-essential \
       ca-certificates \
       clang-format \
       curl \
       git \
+      gnupg \
       jq \
       libbz2-dev \
       libenchant-dev \
@@ -43,6 +46,14 @@ RUN \
       valgrind \
       wget \
       zlib1g-dev \
+  # Setup Node.js package repository
+  # DEV: The nodejs available with the main repo doesn't install npm
+  # https://github.com/nodesource/distributions/blob/025fe79908872abd39c590a45893b59929cb91e6/README.md#debmanual
+  && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource.gpg.key | apt-key add - \
+  && echo "deb https://deb.nodesource.com/${NODE_VERSION} buster main" | tee /etc/apt/sources.list.d/nodesource.list \
+  && echo "deb-src https://deb.nodesource.com/${NODE_VERSION} buster main" | tee -a /etc/apt/sources.list.d/nodesource.list \
+  && apt-get update \
+  && apt-get install -y --no-install-recommends nodejs \
   # Cleaning up apt cache space
   && rm -rf /var/lib/apt/lists/*
 
@@ -75,5 +86,9 @@ RUN \
   wget https://github.com/DataDog/sirun/releases/download/v${SIRUN_VERSION}/sirun-v${SIRUN_VERSION}-x86_64-unknown-linux-gnu.tar.gz \
   && tar -C /usr/local/bin/ -zxf sirun-v${SIRUN_VERSION}-x86_64-unknown-linux-gnu.tar.gz \
   && rm sirun-v${SIRUN_VERSION}-x86_64-unknown-linux-gnu.tar.gz
+
+# Install datadog-ci tool for uploading JUnit XML reports
+# https://www.npmjs.com/package/@datadog/datadog-ci
+RUN npm install -g @datadog/datadog-ci
 
 CMD ["/bin/bash"]
