feat[pytest] Added test parameters tagging into pytest plugin (#2574)
* Added test parameters tagging into pytest plugin.

* Added comment, updated changelog

* Reverted unrelated test.py changes

* Updated spelling wordlist

* Re-added removed unused constant

* Added support for Python non-builtin object encoding into span tag.

* Added hypothesis tests for _json_encode helper.

* Changed default object representation from str() to repr()

* Added exception/side effect handling when reading __dict__ and __repr__

* Formatting

* Make tests compatible for py2 and py3

--- a/.dd-ci/ci-app-spec.json
+++ b/.dd-ci/ci-app-spec.json
@@ -28,6 +28,7 @@
   "runtime.version",
   "test.framework",
   "test.name",
+  "test.parameters",
   "test.skip_reason",
   "test.status",
   "test.suite",
