--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -792,9 +792,9 @@ jobs:
       - image: *ddtrace_dev_image
       - *postgres_server
     steps:
-      - run_tox_scenario:
+      - run_test:
           wait: postgres
-          pattern: '^aiopg_contrib-'
+          pattern: 'aiopg'
 
   redis:
     <<: *machine_executor
