--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -8,6 +8,7 @@ jobs:
   flask-testsuite-1_1_4:
     runs-on: ubuntu-latest
     env:
+      TOX_TESTENV_PASSENV: DD_TESTING_RAISE
       DD_TESTING_RAISE: true
     defaults:
       run:
