--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,7 @@ show_error_codes = true
 warn_unused_ignores = true
 warn_unused_configs = true
 no_implicit_optional = true
+ignore_missing_imports = true
 
 [mypy-ddtrace.contrib.*]
 ignore_errors = true
